feat(main.tex, sample.bib): updating citation

--- a/main.tex
+++ b/main.tex
@@ -119,7 +119,7 @@ El gran volumen de archivos dificulta su gestión si no cuenta con la ayuda del 
 \section{PLANTEAMIENTO DE LA INVESTIGACIÓN}
 \subsection{Planteamiento del Problema}
 Muchas veces el uso de las tecnologías en nuestras épocas no son siempre la primera opción, debido a que ocurre falta de información sobre cómo la tecnología nos puede ayudar en varios aspectos de una empresa u organización. Actualmente, las empresas hoteleras utilizan métodos de registros poco convencionales y estos pueden presentar problemas tanto logísticos como administrativos donde esto conlleva una mala inversión de tiempo para los empleados de la empresa que se encuentra en la ciudad de Arequipa.   
-Según (Baldoceda Chávez Jean 2017) Una típica libreta o memoria de recepción, puede causar molestias a los clientes que llegan y no encuentran su reserva registrada en el sistema. La recepción de una hotelera tiene que ser acogedora, donde se debe administrarse adecuadamente y debe poder recibir datos de todos los clientes, además de proporcionar la información ingresada para realizar una reserva. Administre con precisión la información de cambios o cancelaciones de reservas para brindar soluciones rápidas y específicas a estas solicitudes. En ella suelen existir confusiones por extravío o extravío de información que no se puede almacenar. También se debe considerar las fechas de llegada y salida del hotel, especialmente en temporada alta cuando hay aviso de cancelación, llegada/salida anticipada y cambio de habitación durante la estancia. Según (Piedra, V., 2016) el problema que nos da a conocer es cómo las empresas hoteleras que no están adaptadas a la tecnología pueden presentar problemas al momento de llamar y realizar una reservación ya que se usa métodos poco convencionales como las libretas donde se coloca los datos de un cliente y estas pueden presentar mala escritura por parte del empleado. El desarrollar un sistema para esta empresa puede exhibir grandes mejoras de alta escalabilidad, ya que puede brindar servicios desde pequeñas empresas con pocos usuarios, hasta empresas con diferentes ubicaciones.  
+Según \cite{Por2017} Una típica libreta o memoria de recepción, puede causar molestias a los clientes que llegan y no encuentran su reserva registrada en el sistema. La recepción de una hotelera tiene que ser acogedora, donde se debe administrarse adecuadamente y debe poder recibir datos de todos los clientes, además de proporcionar la información ingresada para realizar una reserva. Administre con precisión la información de cambios o cancelaciones de reservas para brindar soluciones rápidas y específicas a estas solicitudes. En ella suelen existir confusiones por extravío o extravío de información que no se puede almacenar. También se debe considerar las fechas de llegada y salida del hotel, especialmente en temporada alta cuando hay aviso de cancelación, llegada/salida anticipada y cambio de habitación durante la estancia. Según (Piedra, V., 2016) el problema que nos da a conocer es cómo las empresas hoteleras que no están adaptadas a la tecnología pueden presentar problemas al momento de llamar y realizar una reservación ya que se usa métodos poco convencionales como las libretas donde se coloca los datos de un cliente y estas pueden presentar mala escritura por parte del empleado. El desarrollar un sistema para esta empresa puede exhibir grandes mejoras de alta escalabilidad, ya que puede brindar servicios desde pequeñas empresas con pocos usuarios, hasta empresas con diferentes ubicaciones.  
 Por otro lado (	Solano, M. 2012) los problemas que nos muestra los autores más comunes que se presentan en la sección de reservas suelen ser el almacenamiento de información sobre la habitación, como el tipo de habitación que tiene características comunes que necesitamos saber, así como su ubicación real en la casa. La correcta gestión de las fechas de entrada y salida del hotel es también otro quebradero de cabeza, sobre todo en temporada alta cuando a menudo hay cancelaciones, llegadas y salidas anticipadas, cambios de habitación durante la estancia. Gestionar adecuadamente la información sobre cambios o cancelaciones de reservas, dando soluciones rápidas y específicas a estas solicitudes donde muchas veces surgen confusiones por interrupción o pérdida de información almacenada, más que en la típica libreta o en la memoria del personal de recepción, es más frustrante para los huéspedes que llegan al check-in que sus solicitudes no se han tenido en cuenta.
 
 \subsection{Objetivos de la Investigación}
@@ -163,11 +163,11 @@ Por otro lado (	Solano, M. 2012) los problemas que nos muestra los autores más 
 
 \subsection{ESTADO DEL ARTE O ESTADO DE LA CUESTIÓN}
 
-    Recientemente en los últimos años la investigación sobre el uso de la implementación de tecnología para las empresas resulta muy beneficiosa ya que se puede optimizar las actividades dentro una empresa. Para esto, en el siguiente estado técnico, se buscó una serie de artículos que contenían mucha información relacionada con el tema de investigación; pero hay poca o ninguna información sobre su aplicación en nuestro país o sobre estudios relacionados con este tema. Luego, se detallará el contexto relacionado con el tema de investigación en otros países, detallando la metodología, implementación y algunas recomendaciones que tienen en su proyecto de investigación.
-    El paper desarrollado por Garcia Carreño Juan es la realización de un chatbot para la atender a los clientes de un área de servicio, en este caso se centra para el área hotelera con lo que quiera, para esto de utilizar un bot llamado IBM Watson donde este bot contiene tecnología de computación cognitiva y la inteligencia web mediante la computación de la nube. Para el desarrollo y aplicación del bot en una hotelera se le tuvo que entrenar los patrones tales como realizar un saludo al cliente, mostrar los horarios de atención, ubicación,  entre otros que nos complejos para el bot, ya que el mismo autor reconoce que no son perfectos ya que padece de desventajas principales tales como el entendimiento del contexto dentro de una conversación para poder interactuar con el cliente para tener una experiencia agradable o el que, al no tener suficiente entrenamiento no puedan reconocer errores comunes que cometen las personas al escribir por un canal digital.\\ El resultado que se obtuvo fue de 75 porciento de solicitudes respondidas, las cuales fueron las ubicaciones, los horarios del hotel, servicios que se realizan. Para el autor fue todo un logró integrar este bot porque los clientes tuvieron una experiencia con la tecnología de una hotelera. Tal como indica el autor del paper es implementar tecnología en un servicio hotelero sino en todas las áreas de servicio al cliente, el implementar un bot a nuestro proyecto es bastante interesante ya que mejora la experiencia del cliente con la hotelera, no se descarta la idea de implementar este bot con la tecnología que usa el autor del paper. 
-    De acuerdo con los autores del paper nos habla de una implementación de un chatbot de IBM   llamado Watson, el cual permitirá crear un asistente virtual para los turistas de la ciudad de Jaén. Para el desarrollo de esta es usar CMS Wordpress y el uso de un plugin de IBM para la interacción con el bot. La metodología para el desarrollo de este proyecto es SCRUM que es una metodología ágil ya que permite llevar a cabo el análisis y diseño en cada ciclo, para esto se tuvieron que utilizar algunos lenguajes en conocimientos como el Nodejs, Angular.  Los autores como resultados tuvieron respuestas experimentales creadas por los propios autores donde ellos aplicaron machine learning para el entrenamiento. De acuerdo con lo mencionado, el uso de implementar un chatbot es bastante interesante para nuestro proyecto ya que se puede entrenar al bot watson para responder algunas preguntas clave para que interactúe con el usuario, pero el uso de la tecnología de Wordpress no va de acuerdo con nuestro proyecto ya que no es una tecnología escalable ya que esto no permite realizar algunas modificaciones al sistema.\\Los autores presentan como integrar el aprendizaje por refuerzo profundo para modelar a un chatbot esto con un refuerzo de recompensa futura, se simulan diálogos entre dos agentes virtuales y estos se evalúan por diversidad, longitud y evaluadores humanos para de esta forma demostrar que el algoritmo propuesto es capaz de generar respuestas interactivas y que pueda lograr una conversación sostenida, los modelos presentados en el artículo se tiene en cuenta para el desarrollo del chatbot planteado en nuestro documento. Por otra parte hablar sobre las tendencias que existe entre los destinos turísticos y las empresas turísticas que se consideran los hoteles, agencias de viaje, o las agencias en línea. Para esto los autores de este paper nos mencionan el uso de un chatbot para la atención de clientes. Para esto la implementación los autores nos habla de Kayak ya que es utilizado en las plataformas de facebook, messenger, en algunos blogs y en Slack. Los autores nos mencionan que el uso de este chatbot es mediante reglas, es decir, que está programado para obedecer a flujos de navegación bien definidos, que estos responden a ciertos comandos y palabras clave. Con respecto a la validación de este paper los autores nos mencionan que realizaron una encuesta con unos alumnos de la carrera de turismo de una universidad, para que interactúen con el chatbot, que da como resultado un chatbot con un desarrollo de alto nivel. El paper que elaboraron los autores es bastante importante hacia nuestro proyecto ya que la implementación del chatbot hacia un área de una empresa hotelera es muy interesante que se ve como optimizar o mejorar algunos apartados para la hotelera, se toma en cuenta el método de evaluación y los resultados obtenidos. \\
-    Por otro parte los autores nos hablan de un chatbot que llamaron catbot el cual fue entrenado  con un sistema que también realizaron el cual está orientado para su uso por parte de la recepcionista del hotel, esto permitiría dar información para el entrenamiento del chatbot a su vez este chatbot estaría en directo entrenamiento con las necesidades y consultas del cliente, el tener un sistema para la recepcionista también es más optimo debido a la automatización de la recopilación de los datos para el entrenamiento, la metodología usada consta de 4 pasos los cuales son recopilación de requisitos, creación del diseño del sistema de información, la información del diseño del sistema y la evaluación de los resultados de evaluación, se considera una propuesta interesante el hecho de tener un sistema que esté apto para la recopilación de datos para posteriormente usarlos para poder usar estos datos en el entrenamiento de un chatbot personalizado para el sistema, por ende se tomara en consideración en la implementación nuestra propuestas.\\
-    La importancia del uso de tecnologías basadas en AI, para esto los autores nos mencionan de una implementación de un chatbot llamado Smart Guidance para la interacción de los turistas el cual será llevado a un entorno de tecnología móvil. Para este desarrollo tuvieron que utilizar Android Studio, Firebase, Python, para esto se simula un chat con los usuarios en lenguaje natural, además proporciona una interacción bidireccional y es un único punto de contacto para todas las comunicaciones de los usuarios. Con respecto a la validación los autores del paper demostraron que el bot podía entender los significados y las solicitudes de los usuarios, donde se llevó a cabo un caso de uso en la ciudad de Jeddah, Arabia Saudita. Jeddah es la segunda ciudad más grande de Arabia Saudita. De Acuerdo con lo descrito, los autores de este paper nos mencionan la importancia de usar un bot dentro de un sistema de información o un desarrollo móvil para los usuarios, el uso de las tecnologías mencionadas para llevar a cabo son bastantes interesantes ya que usan lenguajes actuales y de fácil manejo en su entorno, se tomará en cuenta el desarrollo de su proyecto para nuestra propuesta de mejora para las empresas hoteleras en la ciudad de Arequipa.
+    Recientemente en los últimos años la investigación sobre el uso de la implementación de tecnología para las empresas resulta muy beneficiosa ya que se puede optimizar las actividades dentro una empresa. Para esto, en el siguiente estado técnico, se buscó una serie de artículos que contenían mucha información relacionada con el tema de investigación; pero hay poca o ninguna información sobre su aplicación en nuestro país o sobre estudios relacionados con este tema. Luego, se detallará el contexto relacionado con el tema de investigación en otros países, detallando la metodología, implementación y algunas recomendaciones que tienen en su proyecto de investigación.\\
+    El paper desarrollado por \cite{Felipe2022} es la realización de un chatbot para la atender a los clientes de un área de servicio, en este caso se centra para el área hotelera con lo que quiera, para esto de utilizar un bot llamado IBM Watson donde este bot contiene tecnología de computación cognitiva y la inteligencia web mediante la computación de la nube. Para el desarrollo y aplicación del bot en una hotelera se le tuvo que entrenar los patrones tales como realizar un saludo al cliente, mostrar los horarios de atención, ubicación,  entre otros que nos complejos para el bot, ya que el mismo autor reconoce que no son perfectos ya que padece de desventajas principales tales como el entendimiento del contexto dentro de una conversación para poder interactuar con el cliente para tener una experiencia agradable o el que, al no tener suficiente entrenamiento no puedan reconocer errores comunes que cometen las personas al escribir por un canal digital.\\ El resultado que se obtuvo fue de 75 porciento de solicitudes respondidas, las cuales fueron las ubicaciones, los horarios del hotel, servicios que se realizan. Para el autor fue todo un logró integrar este bot porque los clientes tuvieron una experiencia con la tecnología de una hotelera. Tal como indica el autor del paper es implementar tecnología en un servicio hotelero sino en todas las áreas de servicio al cliente, el implementar un bot a nuestro proyecto es bastante interesante ya que mejora la experiencia del cliente con la hotelera, no se descarta la idea de implementar este bot con la tecnología que usa el autor del paper. 
+    De acuerdo con los autores del paper nos habla de una implementación de un chatbot de IBM   llamado Watson, el cual permitirá crear un asistente virtual para los turistas de la ciudad de Jaén. Para el desarrollo de esta es usar CMS Wordpress y el uso de un plugin de IBM para la interacción con el bot. La metodología para el desarrollo de este proyecto es SCRUM que es una metodología ágil ya que permite llevar a cabo el análisis y diseño en cada ciclo, para esto se tuvieron que utilizar algunos lenguajes en conocimientos como el Nodejs, Angular.  Los autores como resultados tuvieron respuestas experimentales creadas por los propios autores donde ellos aplicaron machine learning para el entrenamiento. De acuerdo con lo mencionado, el uso de implementar un chatbot es bastante interesante para nuestro proyecto ya que se puede entrenar al bot watson para responder algunas preguntas clave para que interactúe con el usuario, pero el uso de la tecnología de Wordpress no va de acuerdo con nuestro proyecto ya que no es una tecnología escalable ya que esto no permite realizar algunas modificaciones al sistema.\cite{Muñoz2018}\\Los autores presentan como integrar el aprendizaje por refuerzo profundo para modelar a un chatbot esto con un refuerzo de recompensa futura, se simulan diálogos entre dos agentes virtuales y estos se evalúan por diversidad, longitud y evaluadores humanos para de esta forma demostrar que el algoritmo propuesto es capaz de generar respuestas interactivas y que pueda lograr una conversación sostenida, los modelos presentados en el artículo se tiene en cuenta para el desarrollo del chatbot planteado en nuestro documento. Por otra parte hablar sobre las tendencias que existe entre los destinos turísticos y las empresas turísticas que se consideran los hoteles, agencias de viaje, o las agencias en línea. Para esto los autores de este paper nos mencionan el uso de un chatbot para la atención de clientes. Para esto la implementación los autores nos habla de Kayak ya que es utilizado en las plataformas de facebook, messenger, en algunos blogs y en Slack. Los autores nos mencionan que el uso de este chatbot es mediante reglas, es decir, que está programado para obedecer a flujos de navegación bien definidos, que estos responden a ciertos comandos y palabras clave. Con respecto a la validación de este paper los autores nos mencionan que realizaron una encuesta con unos alumnos de la carrera de turismo de una universidad, para que interactúen con el chatbot, que da como resultado un chatbot con un desarrollo de alto nivel. El paper que elaboraron los autores es bastante importante hacia nuestro proyecto ya que la implementación del chatbot hacia un área de una empresa hotelera es muy interesante que se ve como optimizar o mejorar algunos apartados para la hotelera, se toma en cuenta el método de evaluación y los resultados obtenidos.\cite{Dias2020} \\
+    Por otro parte los autores nos hablan de un chatbot que llamaron catbot el cual fue entrenado  con un sistema que también realizaron el cual está orientado para su uso por parte de la recepcionista del hotel, esto permitiría dar información para el entrenamiento del chatbot a su vez este chatbot estaría en directo entrenamiento con las necesidades y consultas del cliente, el tener un sistema para la recepcionista también es más optimo debido a la automatización de la recopilación de los datos para el entrenamiento, la metodología usada consta de 4 pasos los cuales son recopilación de requisitos, creación del diseño del sistema de información, la información del diseño del sistema y la evaluación de los resultados de evaluación, se considera una propuesta interesante el hecho de tener un sistema que esté apto para la recopilación de datos para posteriormente usarlos para poder usar estos datos en el entrenamiento de un chatbot personalizado para el sistema, por ende se tomara en consideración en la implementación nuestra propuestas.\cite{Levannoza2020} \\
+    La importancia del uso de tecnologías basadas en AI, para esto los autores nos mencionan de una implementación de un chatbot llamado Smart Guidance para la interacción de los turistas el cual será llevado a un entorno de tecnología móvil. Para este desarrollo tuvieron que utilizar Android Studio, Firebase, Python, para esto se simula un chat con los usuarios en lenguaje natural, además proporciona una interacción bidireccional y es un único punto de contacto para todas las comunicaciones de los usuarios. Con respecto a la validación los autores del paper demostraron que el bot podía entender los significados y las solicitudes de los usuarios, donde se llevó a cabo un caso de uso en la ciudad de Jeddah, Arabia Saudita. Jeddah es la segunda ciudad más grande de Arabia Saudita. De Acuerdo con lo descrito, los autores de este paper nos mencionan la importancia de usar un bot dentro de un sistema de información o un desarrollo móvil para los usuarios, el uso de las tecnologías mencionadas para llevar a cabo son bastantes interesantes ya que usan lenguajes actuales y de fácil manejo en su entorno, se tomará en cuenta el desarrollo de su proyecto para nuestra propuesta de mejora para las empresas hoteleras en la ciudad de Arequipa.\cite{Alotaibi2020}
     Al ver terminado de realizar el estado del arte, el uso de tecnología escalable específicamente  en el desarrollo web, muestran que los autores usan este apartado para resolver varios de los problemas que presentan dentro de las empresas; podemos concluir que varios de los autores que presentan el uso de las tecnologías escalables que pueden ser utilizadas para el desarrollo del sistema de reserva hotelera en Arequipa ya que se demuestra que el desarrollo de sistemas escalables son muy beneficios para una empresa. 
 
 
