--- a/sample.bib
+++ b/sample.bib
@@ -138,7 +138,7 @@
 }
 
 @article{Dias2020,
-   author = {Itamar Dias e Cordeiro and Izabelly Maria da Silva Batista and Itamar Dias e Cordeiro and Izabelly Maria da Silva Batista},
+   author = {Itamar Dias Cordeiro and Izabelly Maria da Silva Batista and Itamar Dias e Cordeiro and Izabelly Maria da Silva Batista},
    issn = {1851-1732},
    issue = {3},
    journal = {Estudios y perspectivas en turismo},
